--- a/Invernadero/Windows/templates/landing.html
+++ b/Invernadero/Windows/templates/landing.html
@@ -11,16 +11,27 @@
 
   <!-- NAVBAR -->
   <header class="navbar">
+  <section class="spbt">
+  <button class="menu-toggle" id="menuToggle">&#9776;</button>
     <div class="logo">FloraCore</div>
-    <nav class="menu">
+    </section>
+    <nav class="menu" id="navMenu">
       <a href="{% url 'landing' %}">Inicio</a>
       <a href="{% url 'funciones' %}">Funciones</a>
       <a href="{% url 'equipos' %}">Equipos</a>
       <a href="{% url 'contacto' %}">Contáctanos</a>
       <a href="{% url 'estadisticas' %}">Estadisticas</a>
+      <hr >
+       <button class="user-btn" onclick="window.location.href='{% url 'signin' %}'">Iniciar Sesión</button>
     </nav>
-  <button class="user-btn" onclick="window.location.href='{% url 'signin' %}'">Iniciar Sesión</button>
+ 
+    
   </header>
+{% comment %} 
+  <!-- HERO -->
+
+  <button class="user-btn" onclick="window.location.href='{% url 'signin' %}'">Iniciar Sesión</button>
+  </header> {% endcomment %}
 
   <!-- HERO -->
   <section class="hero">
@@ -74,5 +85,15 @@
     <p>Copyright © 2025 FloraCore</p>
   </footer>
 
+    <script>
+    document.addEventListener('DOMContentLoaded', function() {
+        const menuToggle = document.getElementById('menuToggle');
+        const navMenu = document.getElementById('navMenu');
+
+        menuToggle.addEventListener('click', function() {
+            navMenu.classList.toggle('active');
+        });
+    });
+</script>
 </body>
 </html>
