Frontend: Se agrego responsividad casi en toda las vistas

--- a/Invernadero/Authentication/templates/registration/password_reset.html
+++ b/Invernadero/Authentication/templates/registration/password_reset.html
@@ -3,7 +3,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>GreenHouse - Email Enviado</title>
+    <title>GreenHouse - Recuperar Contraseña</title>
     <link rel="stylesheet" href="{% static 'css/password_reset.css' %}">
 </head>
 <body>
@@ -15,6 +15,7 @@
                     <path d="M12 19l-7-7 7-7"></path>
                 </svg>
             </a>
+        <form action="{% url 'password_reset' %}" method="POST">
 
         <div class="plantita">
             <!-- SVG de la plantita -->
@@ -33,13 +34,25 @@
         </div>
 
         <h1>GreenHouse</h1>
-        <h2>Email de Recuperación Enviado</h2>
+        <h2>Recuperar Contraseña</h2>
+        {% csrf_token %}
 
-        <p>Hemos enviado un enlace de recuperación a tu correo electrónico.</p>
-        <p>Revisa tu bandeja de entrada (y la carpeta de spam) para seguir las instrucciones y restablecer tu contraseña.</p>
+        <div class="form-group">
+            Email:
+            {{ form.email }}
+            {% if form.email.errors %}
+                <p class="error">{{ form.email.errors.0 }}</p>
+            {% endif %}
+        </div>
 
-        <p class="register-text">¿No recibiste el email? <a href="{% url 'password_reset' %}">Enviar de nuevo</a></p>
-        <p class="register-text">¿Recordaste tu contraseña? <a href="{% url 'signin' %}">Iniciar Sesión</a></p>
+        <button type="submit">Enviar Email</button>
+        {% if form.non_field_errors %}
+            {% for error in form.non_field_errors %}
+                <p class="error">{{ error }}</p>
+            {% endfor %}
+        {% endif %}
+        <p class="register-text">Recordaste tu contraseña? <a href="{% url 'signin' %}">Iniciar Sesión</a></p>
+        </form>
     </div>
 </body>
 </html>
